--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,34 @@ ELEVENLABS_API_KEY="sk_***"
 pgql_db="postgres"
 pgql_user="localhost"
 pgql_psw="admin"
+
+# RAGFlow Integration Environment Configuration
+
+# Supabase Configuration (for vector storage)
+SUPABASE_URL=https://gixypiuqzhyungysoauh.supabase.co
+SUPABASE_KEY=your-supabase-anon-key-here
+
+# Neo4j Configuration (for knowledge graph)
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=your-neo4j-password
+
+# Additional LLM Provider Configuration
+GOOGLE_API_KEY=your-google-api-key
+ANTHROPIC_API_KEY=your-anthropic-api-key
+
+# Ollama Configuration (for local LLM)
+OLLAMA_HOST=http://localhost:11434
+
+# RAGFlow API Configuration
+RAGFLOW_API_KEY=changeme-to-secure-key
+
+# Optional: Logging Configuration
+RAGFLOW_LOG_LEVEL=INFO
+RAGFLOW_LOG_FILE=ragflow.log
+
+# Optional: Feature Toggles
+ENABLE_VECTOR_SEARCH=true
+ENABLE_KNOWLEDGE_GRAPH=true
+ENABLE_WEB_CRAWLING=true
+ENABLE_MULTI_LLM=true
